force-app/main/default/objects/Case/fields/Disaster_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Zipcode__c</fullName>
    <label>Disaster Zipcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>