force-app/main/default/objects/Case/fields/Emergency_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Type__c</fullName>
    <label>Emergency Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>